# SimpleSolana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: compile.yml
programs/hello_solana/: Cargo.toml
programs/hello_solana/src/: lib.rs
src/: lib.rs
tests/: test.ts
